--- a/Orihsay.vcxproj
+++ b/Orihsay.vcxproj
@@ -77,6 +77,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="components\Camera.cpp" />
     <ClCompile Include="components\Panel.cpp" />
     <ClCompile Include="dx\directx.cpp" />
     <ClCompile Include="dx\DXInstancing.cpp" />
@@ -84,11 +85,14 @@
     <ClCompile Include="gameplay\MonoBehaviour.cpp" />
     <ClCompile Include="gameplay\Scene.cpp" />
     <ClCompile Include="gameplay\SceneManager.cpp" />
+    <ClCompile Include="gameplay\Transform.cpp" />
+    <ClCompile Include="Graphics\Renderer.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="misc\CharHelper.cpp" />
     <ClCompile Include="misc\ClassFactory.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="components\Camera.h" />
     <ClInclude Include="components\Panel.h" />
     <ClInclude Include="dx\directx.h" />
     <ClInclude Include="dx\DXInstancing.h" />
@@ -96,6 +100,9 @@
     <ClInclude Include="gameplay\MonoBehaviour.h" />
     <ClInclude Include="gameplay\Scene.h" />
     <ClInclude Include="gameplay\SceneManager.h" />
+    <ClInclude Include="gameplay\Transform.h" />
+    <ClInclude Include="graphics\Renderer.h" />
+    <ClInclude Include="math\EasyMath.h" />
     <ClInclude Include="misc\CharHelper.h" />
     <ClInclude Include="misc\ClassFactory.h" />
     <ClInclude Include="rapidjson\allocators.h" />
