--- a/Orihsay.vcxproj
+++ b/Orihsay.vcxproj
@@ -80,6 +80,7 @@
     <ClCompile Include="components\Camera.cpp" />
     <ClCompile Include="components\Panel.cpp" />
     <ClCompile Include="dx\directx.cpp" />
+    <ClCompile Include="dx\DXInstancedMesh.cpp" />
     <ClCompile Include="dx\DXInstancing.cpp" />
     <ClCompile Include="gameplay\GameObject.cpp" />
     <ClCompile Include="gameplay\MonoBehaviour.cpp" />
@@ -95,6 +96,7 @@
     <ClInclude Include="components\Camera.h" />
     <ClInclude Include="components\Panel.h" />
     <ClInclude Include="dx\directx.h" />
+    <ClInclude Include="dx\DXInstancedMesh.h" />
     <ClInclude Include="dx\DXInstancing.h" />
     <ClInclude Include="gameplay\GameObject.h" />
     <ClInclude Include="gameplay\MonoBehaviour.h" />
@@ -126,6 +128,12 @@
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Pixel</ShaderType>
     </FxCompile>
     <FxCompile Include="dx\shaders\instanced_quad_vs.hlsl">
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Vertex</ShaderType>
+    </FxCompile>
+    <FxCompile Include="dx\shaders\instanced_simple_mesh_ps.hlsl">
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Pixel</ShaderType>
+    </FxCompile>
+    <FxCompile Include="dx\shaders\instanced_simple_mesh_vs.hlsl">
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Vertex</ShaderType>
     </FxCompile>
     <FxCompile Include="dx\shaders\uiquad_ps.hlsl">
