camera movement now works. transform rotation still needs a rewrite.

--- a/Orihsay.vcxproj
+++ b/Orihsay.vcxproj
@@ -79,6 +79,7 @@
   <ItemGroup>
     <ClCompile Include="components\Camera.cpp" />
     <ClCompile Include="components\CubeMesh.cpp" />
+    <ClCompile Include="components\InputManager.cpp" />
     <ClCompile Include="components\Panel.cpp" />
     <ClCompile Include="dx\directx.cpp" />
     <ClCompile Include="dx\DXInstancedMesh.cpp" />
@@ -98,6 +99,7 @@
   <ItemGroup>
     <ClInclude Include="components\Camera.h" />
     <ClInclude Include="components\CubeMesh.h" />
+    <ClInclude Include="components\InputManager.h" />
     <ClInclude Include="components\Panel.h" />
     <ClInclude Include="dx\directx.h" />
     <ClInclude Include="dx\DXInstancedMesh.h" />
