--- a/Orihsay.vcxproj.filters
+++ b/Orihsay.vcxproj.filters
@@ -268,6 +268,12 @@
     <FxCompile Include="dx\shaders\deferred_quad_vs.hlsl">
       <Filter>Source Files\dx\shaders</Filter>
     </FxCompile>
+    <FxCompile Include="dx\shaders\instanced_sprite_ps.hlsl">
+      <Filter>Source Files\dx\shaders</Filter>
+    </FxCompile>
+    <FxCompile Include="dx\shaders\instanced_sprite_vs.hlsl">
+      <Filter>Source Files\dx\shaders</Filter>
+    </FxCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagram.cd" />
